<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_TransportTubeOps" Id="{ec52e162-4e74-013e-040f-0be8b0b5fc20}">
    <Declaration><![CDATA[TYPE ST_TransportTubeOps :
STRUCT
	// Pumps
	bIonPumpIgnore : BOOL := FALSE;
	
	// Valves
	bGateValveIgnore : BOOL := FALSE;
	
	// Gauges
	ePiraniOp : E_GaugeCompOp := E_GaugeCompOp.IGNORE;
	eColdCathodeOp : E_GaugeCompOp := E_GaugeCompOp.IGNORE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>