<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="GVL_MaintainLaser" Id="{49b877be-6c49-4824-88a9-9cf661762608}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:BUSY
		io: i
		field: ZNAM NOT_BUSY
		field: ONAM BUSY
	'}
	q_bOperationInProgress : BOOL;
	
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:RESET
		io: o
	'}
	i_bReset : BOOL; // Reset the laser maintainer to default state
	
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:SHUTOFF
		io: o		
	'}
	i_bShutoff : BOOL; // Signal to shutoff all laser ok signals
	
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:ION_PUMP_FAILURE
		io: i
		field: ZNAM OK
		field: ONAM ERROR
		field: OSV MAJOR
	'}
	q_bIonPumpFailure : BOOL;
	
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:TURBO_PUMP_FAILURE
		io: i
		field: ZNAM OK
		field: ONAM ERROR
		field: OSV MAJOR
	'}
	q_bTurboPumpFailure : BOOL;
	
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:ROUGHING_PUMP_FAILURE
		io: i
		field: ZNAM OK
		field: ONAM ERROR
		field: OSV MAJOR
	'}
	q_bRoughingPumpFailure : BOOL;
	
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:MESSAGE
		io: i
	'}
	q_sMessage : STRING(EPICS_STRING_SIZE) := 'No issues';
	
	{attribute 'pytmc' := '
		pv: PLC_LAS_BTS_VAC:LASER_MAINTAINER:SHUTOFF_LATCH
		io: i
		field: ZNAM OK
		field: ONAM LASERS_SHUTOFF
		field: OSV MAJOR
	'}
	q_bShutoffLatch : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>